--- a/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
+++ b/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
@@ -834,6 +834,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# French 2d map"
+      ],
+      "metadata": {
+        "id": "7e3nz3rMjur5"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
@@ -871,6 +880,15 @@
         "plt.show()\n",
         "bifr2 = plotbihistogram(bigram_fr2)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# German 2D map"
+      ],
+      "metadata": {
+        "id": "b9QJB9Ogj2u_"
+      }
     },
     {
       "cell_type": "code",
