--- a/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
+++ b/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
@@ -1181,6 +1181,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Plotting Trigram with Pie Chary"
+      ],
+      "metadata": {
+        "id": "zyQHS0S0kWkR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1222,15 +1231,6 @@
           "execution_count": 40
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MuAsR4J7YIoT"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
