--- a/AIML_Module_1_Lab_2_Machine_learning_terms_and_metrics.ipynb
+++ b/AIML_Module_1_Lab_2_Machine_learning_terms_and_metrics.ipynb
@@ -775,6 +775,52 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# if we increase the percentage of validation set\n",
+        "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 50/100)\n",
+        "valpred = NN(traindata, trainlabel, valdata)\n",
+        "valAccuracy = Accuracy(vallabel, valpred)\n",
+        "print(\"Validation accuracy of nearest neighbour After increasing validation set is \", valAccuracy)\n",
+        "# if we increase the percentage of validation set\n",
+        "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 90/100)\n",
+        "valpred = NN(traindata, trainlabel, valdata)\n",
+        "valAccuracy = Accuracy(vallabel, valpred)\n",
+        "print(\"Validation accuracy of nearest neighbour After reducing validation set is \", valAccuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zLsujliZC6iA",
+        "outputId": "80ac3aed-00c8-4524-f2c4-b9f108bcb628"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation accuracy of nearest neighbour After increasing validation set is  0.3264311814859927\n",
+            "Validation accuracy of nearest neighbour After reducing validation set is  0.3462669018224574\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "the accuracy has reduced if we increase the validation set\\\n",
+        "the accuracy is increased if we reduce the validtion set\\\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ux7NwE9vDr3R"
+      }
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "PnYvkAZLQY7h"
